ci-cd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sticked-words
  name: sticked-words
spec:
  ports:
  - port: 8080
  selector:
    app: sticked-words
  type: NodePort
