ci-cd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sticked-words-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sticked-words.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sticked-words
            port:
              number: 8080
